--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,14 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+Version 0.2.1
+-------------
+
+Released on April 11th 2016
+
+- Add sensor count to label lists
+
+
 Version 0.2.0
 -------------
 
