--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,17 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+Version 0.2.2
+-------------
+
+Release on April 11th 2016
+
+- Add timeseries list/dump start and end date filtering support
+- Add cloud-script delete support
+- Add deploy state as part of the sensor-script list output
+- Add sensor count to label lists
+
+
 Version 0.2.1
 -------------
 
