--- a/CHANGES
+++ b/CHANGES
@@ -6,7 +6,7 @@ Here you'll find the major differences between each release.
 Version 0.3.0
 -------------
 
-Release on April 12th 2016
+Released on April 12th 2016
 
 - Add timeseries list/dump start and end date filtering support
 - Add cloud-script delete support
