--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,18 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+
+Version 0.4.0
+-------------
+
+Released on April 12th 2016
+
+- Introced organization command
+- Removed timeseries top level command
+- Introduces timeseries sub-command for label, sensor, organization and cloud-script
+- Introduces dump sub-command for sensor, label and organization
+
+
 Version 0.3.0
 -------------
 
