--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,15 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+Version 0.4.3
+-------------
+
+Released on April 15th 2016
+
+- Adds the update subcommandn for sensors
+- Exposes service level ability to post to a sensor timeseries
+
+
 Version 0.4.2
 -------------
 
