Fix up sensor creation

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,15 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+
+Version 0.4.8
+-------------
+
+Released on April 19th 2016
+
+- Fixes up virtual sensor creation
+
+
 Version 0.4.7
 -------------
 
