--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,16 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+Version 0.5.0
+-------------
+
+Released on April 21th 2016
+
+- Use short ids or the name in addition to the full uuid of resources for commands!
+- Fixes cloud-script status command for normal running scripts
+- Add ability to name and set state of a cloud-script on deploy
+
+
 Version 0.4.9
 -------------
 
