--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,14 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+Version 0.6.0
+-------------
+
+Released on May 16th 2016
+
+- Add agg-type and agg-size otpion to expose timeseries aggregation
+- Add versions support for elements and sensors
+
 
 Version 0.5.4
 -------------
