--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,14 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+Version 0.6.1
+-------------
+
+Released on May 16th 2016
+
+- Fix a breaking initialization bug
+
+
 Version 0.6.0
 -------------
 
