Update CHANGES for 0.6.3
Simplify Makefile to allow versions to be separate from uploads

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,15 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+
+Version 0.6.3
+-------------
+
+Released on May 24th 2016
+
+- Attemtps to fix up the version release issues in release scripts
+
+
 Version 0.6.2
 -------------
 
