--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,15 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+Version 0.7.0
+-------------
+
+Released on June 20th 2016
+
+- timseries command re-structure. This makes timeseries list replace the plain timeseries subcommand
+- timeseries post support for sensors and organization
+
+
 Version 0.6.9
 -------------
 
