--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,14 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+Version 0.7.3
+-------------
+
+Released on June 22th 2016
+
+- Add a --mac option to element and sensor lookup to enable quick lookup by mac address
+
+
 Version 0.7.2
 -------------
 
