--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,15 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+Version 0.7.5
+-------------
+
+Released on July 1th 2016
+
+- Added --sort option to lists of elements and sensors 
+- Added --reverse option to go with the new sort option above
+
+
 Version 0.7.4
 -------------
 
