--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,15 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+Version 0.8.0
+-------------
+
+Released on July 2 2016
+
+- Re-factored service class to expose re-usable methods more cleanly
+- Simpler base url handling. Hopefully this avoids the sporadic encoding issues
+
+
 Version 0.7.5
 -------------
 
