--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,14 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+Version 0.9.0
+-------------
+
+Released on July 6 2016
+
+- Add timeseries live subcommand to display live timeseries data for oragnization and sensors
+
+
 Version 0.8.0
 -------------
 
