--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,64 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+
+Version 0.11.0
+-------------
+
+Released on November 23  2016
+
+ - Adds metadata subcommands for organization, sensor and element.
+
+
+Version 0.10.1
+-------------
+
+Released on November 21  2016
+
+ - Switch to new helium-python attribute approach.
+ - Display org timezone support and datapoint sensor information.
+ - Add pending invitation information to user list.
+
+
+Version 0.9.13
+-------------
+
+Released on November 9  2016
+
+ - Add sensor->element and element->sensor commands to allow
+   connectivity lookups.
+
+
+Version 0.9.11
+-------------
+
+Released on October 11  2016
+
+ - Add error output for live tabular data. Live data can only be
+   displayed using json or csv output formats.
+- Rename timeseries post to timeseries create to match resource
+   creation naming conventions.
+
+Version 0.9.7
+-------------
+
+Released on September 21  2016
+
+ - Removes sensor version information. An an alternate form of knowing
+   what firmware version of Helium OS is running will come back soon.
+ - Adds tests for most commands
+ - Adds last-seen to element information
+ - Adds start, end and port filters back to timeseries commands
+
+
+Version 0.9.3
+-------------
+
+Released on August 10  2016
+
+ - Fixes organization timeseries dump command
+
+
 Version 0.9.2
 -------------
 
