--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,15 @@ Helium Commander Changelog
 Here you'll find the major differences between each release.
 
 
+Version 0.13.0
+--------------------
+
+Released on December 10
+
+ - Adds connected state to element listings
+ - Adds device configuration support
+
+
 Version 0.12.0
 --------------------
 
