Update CHANGES for 0.13.1

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,14 @@ Helium Commander Changelog
 Here you'll find the major differences between each release.
 
 
+Version 0.13.1
+--------------------
+
+Released on December 15
+
+ - Adds label timeseries live support 
+
+
 Version 0.13.0
 --------------------
 
