--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,14 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+Version 0.15.0
+--------------------
+
+Released on January 24
+
+ - Adds support for elements in labels
+
+
 Version 0.14.0
 --------------------
 
