--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,12 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+Version 0.15.6
+--------------------
+
+Released on February 27
+
+ - Use helium-python 0.9.0 for filter support
 
 
 Version 0.15.5
