--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,15 @@ Helium Commander Changelog
 
 Here you'll find the major differences between each release.
 
+
+Version 0.15.7
+--------------------
+
+Released on February 28
+
+ - Handle null mac addresses better
+
+
 Version 0.15.6
 --------------------
 
